--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                 <circle cx="75" cy="75" r="60" stroke="#322F41" stroke-width="5"/>
             </svg>
         </section>
-        
+        <!--
+        <br />
+        <p id="time">
+            Time: 
+        </p>-->
     </body>
 </html>
